fix: text wrap

--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ pre {
 	word-wrap: break-word;
 	background-color: #111;
 	border: 1px solid #333;
+	text-wrap: wrap;
 }
 code {
 	padding: 2px 4px;
